--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
+    - name: Check installed packages
+      run: |
+        pip show Flask
+        pip show Werkzeug
 
     - name: Run tests
       run: |
